<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.0</version>
        <relativePath/>
    </parent>

    <groupId>no.nav.bidrag</groupId>
    <artifactId>bidrag-skatteetaten</artifactId>
    <name>Bidrag skatteetaten</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <kotlin.version>2.1.20</kotlin.version>
        <bidrag-felles.version>2025.06.10.122752</bidrag-felles.version>
        <jackson.version>2.18.3</jackson.version>
        <kotest.version>5.9.1</kotest.version>
        <ktlint.version>1.4.1</ktlint.version>
        <mockk.version>1.14.0</mockk.version>
        <springmockk.version>4.0.2</springmockk.version>
        <nav-token-support.version>5.0.25</nav-token-support.version>
        <kotlin-logging-jvm.version>7.0.7</kotlin-logging-jvm.version>
        <slack-api.version>1.45.3</slack-api.version>
        <shedlock.version>6.3.0</shedlock.version>
        <jsch.version>2.27.0</jsch.version>
        <google-cloud-storage.version>2.52.3</google-cloud-storage.version>
        <spring-cloud-contract-wiremock.version>4.2.1</spring-cloud-contract-wiremock.version>
        <springdoc-openapi-ui.version>2.8.8</springdoc-openapi-ui.version>
        <logback-encoder.version>8.0</logback-encoder.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>${kotlin.version}</version>
        </dependency>
    </dependencies>

    <modules>
        <module>bidrag-regnskap</module>
        <module>bidrag-aktoerregister</module>
        <module>bidrag-reskontro</module>
        <module>bidrag-elin-stub</module>
        <module>bidrag-reskontro-legacy</module>
    </modules>

    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/navikt/bidrag-felles</url>
        </repository>
        <repository>
            <id>confluent</id>
            <name>Confluent kafka</name>
            <url>https://packages.confluent.io/maven/</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <id>it</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>OSX</id>
            <activation>
                <os>
                    <name>Mac OS X</name>
                </os>
            </activation>
            <properties>
                <profile.default.on>false</profile.default.on>
            </properties>
            <repositories>
                <repository>
                    <id>nexus-internal-release</id>
                    <url>https://repo.adeo.no/repository/maven-release</url>
                </repository>
                <repository>
                    <id>nexus-internal-mirror</id>
                    <url>https://repo.adeo.no/repository/maven-public</url>
                </repository>
            </repositories>
        </profile>
        <profile>
            <id>default</id>
            <activation>
                <property>
                    <name>profile.default.on</name>
                    <value>true</value>
                </property>
            </activation>
            <repositories>
                <repository>
                    <id>github</id>
                    <url>https://maven.pkg.github.com/navikt/bidrag-felles</url>
                </repository>
            </repositories>
        </profile>
    </profiles>

    <build>
        <finalName>app</finalName>
        <sourceDirectory>src/main/kotlin</sourceDirectory>
        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-maven-plugin</artifactId>
                <version>${kotlin.version}</version>
                <executions>
                    <execution>
                        <id>compile</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>test-compile</id>
                        <phase>test-compile</phase>
                        <goals>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <args>
                        <arg>-Xjsr305=strict</arg>
                    </args>
                    <compilerPlugins>
                        <plugin>spring</plugin>
                        <plugin>jpa</plugin>
                    </compilerPlugins>
                    <jvmTarget>${java.version}</jvmTarget>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-allopen</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.jetbrains.kotlin</groupId>
                        <artifactId>kotlin-maven-noarg</artifactId>
                        <version>${kotlin.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>ktlint</id>
                        <phase>verify</phase>
                        <configuration>
                            <target name="ktlint">
                                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                      classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                    <arg value="src/**/*.kt"/>
                                </java>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>ktlint-format</id>
                        <phase>validate</phase>
                        <configuration>
                            <target name="ktlint">
                                <java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
                                      classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
                                    <jvmarg value="--add-opens"/>
                                    <jvmarg value="java.base/java.lang=ALL-UNNAMED"/>
                                    <arg value="-F"/>
                                    <arg value="src/**/*.kt"/>
                                </java>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.pinterest.ktlint</groupId>
                        <artifactId>ktlint-cli</artifactId>
                        <version>${ktlint.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>